{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 652,
  "lineage": "19eb4ba9-e6af-0f9f-15ff-7be7c1c37ae5",
  "resources": [
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "inventory_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/inventory-lb/e21b101323cf48e0",
            "arn_suffix": "app/inventory-lb/e21b101323cf48e0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "inventory-lb-1220267120.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/inventory-lb/e21b101323cf48e0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "inventory-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0827ad3a6df919600"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bee5d70fdc658d41"
              },
              {
                "subnet_id": "subnet-0f87ebfabf38399b2"
              }
            ],
            "subnets": [
              "subnet-0bee5d70fdc658d41",
              "subnet-0f87ebfabf38399b2"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-0cb508df5b3658f8a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs_inventory_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "inventory_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/inventory-lb/e21b101323cf48e0/115c57cbc1772191",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/inventory-tg/a58de0edd0d13468",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/inventory-lb/e21b101323cf48e0/115c57cbc1772191",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/inventory-lb/e21b101323cf48e0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_inventory_service.aws_lb.inventory_lb",
            "module.ecs_inventory_service.aws_lb_target_group.inventory_tg",
            "module.ecs_inventory_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "inventory_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/inventory-tg/a58de0edd0d13468",
            "arn_suffix": "targetgroup/inventory-tg/a58de0edd0d13468",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 90,
                "matcher": "200-299",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/inventory-tg/a58de0edd0d13468",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "inventory-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_sg_inventory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-08a4674dd10e72db1",
            "description": "Security group for ECS tasks that allows outbound HTTPS (443) traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS traffic on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-08a4674dd10e72db1",
            "ingress": [],
            "name": "ecs-task-sg_inventory",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-0827ad3a6df919600",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0827ad3a6df919600",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "inventory-lb-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "order_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/order-lb/8e3f05b5a4367f50",
            "arn_suffix": "app/order-lb/8e3f05b5a4367f50",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "order-lb-1749257799.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/order-lb/8e3f05b5a4367f50",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "order-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-056eccd0bcd3a3c11"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bee5d70fdc658d41"
              },
              {
                "subnet_id": "subnet-0f87ebfabf38399b2"
              }
            ],
            "subnets": [
              "subnet-0bee5d70fdc658d41",
              "subnet-0f87ebfabf38399b2"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-0cb508df5b3658f8a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs_order_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "order_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/order-lb/8e3f05b5a4367f50/5ebdaaae20907bc8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/order-tg/8dfed8bf904bd6d4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/order-lb/8e3f05b5a4367f50/5ebdaaae20907bc8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/order-lb/8e3f05b5a4367f50",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_order_service.aws_lb.order_lb",
            "module.ecs_order_service.aws_lb_target_group.order_tg",
            "module.ecs_order_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "order_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/order-tg/8dfed8bf904bd6d4",
            "arn_suffix": "targetgroup/order-tg/8dfed8bf904bd6d4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 90,
                "matcher": "200-299",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/order-tg/8dfed8bf904bd6d4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "order-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-00e3bdcc928e1f933",
            "description": "Security group for ECS tasks that allows outbound HTTPS (443) traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS traffic on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-00e3bdcc928e1f933",
            "ingress": [],
            "name": "ecs-task-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-056eccd0bcd3a3c11",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056eccd0bcd3a3c11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "order-lb-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:internet-gateway/igw-000b408ddd8e96f50",
            "id": "igw-000b408ddd8e96f50",
            "owner_id": "294417223953",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de6afff8c4533ddb",
            "association_id": "eipassoc-0670b96e4b6c9a1ba",
            "connectivity_type": "public",
            "id": "nat-07a535b04d7670ec2",
            "network_interface_id": "eni-0d9e79983e866f0ea",
            "private_ip": "172.1.1.141",
            "public_ip": "100.26.115.242",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa01402c4891b8dd",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            }
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:route-table/rtb-0b7db4e0061dac9c5",
            "id": "rtb-0b7db4e0061dac9c5",
            "owner_id": "294417223953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a535b04d7670ec2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:route-table/rtb-0f1b2addeb0f0080c",
            "id": "rtb-0f1b2addeb0f0080c",
            "owner_id": "294417223953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000b408ddd8e96f50",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04864319373aac5bb",
            "route_table_id": "rtb-0b7db4e0061dac9c5",
            "subnet_id": "subnet-0f87ebfabf38399b2"
          },
          "dependencies": [
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed31d01471b54d78",
            "route_table_id": "rtb-0b7db4e0061dac9c5",
            "subnet_id": "subnet-0bee5d70fdc658d41"
          },
          "dependencies": [
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea69adaddf288838",
            "route_table_id": "rtb-0f1b2addeb0f0080c",
            "subnet_id": "subnet-0fa01402c4891b8dd"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080923bd7920c02b2",
            "route_table_id": "rtb-0f1b2addeb0f0080c",
            "subnet_id": "subnet-09f3f0a6f552a65dd"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-05422201153769d0f",
            "description": "Allow fargate inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05422201153769d0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.1.0.0/16"
                ],
                "description": "Allow PostgreSQL access from trusted CIDRs",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "fargate-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-02ad7ce16ca7d2014",
            "description": "Allow PostgreSQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ad7ce16ca7d2014",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.1.0.0/16"
                ],
                "description": "Allow PostgreSQL access from trusted CIDRs",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgresql-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-010fbe6b9ce322bfb",
            "description": "Security group for VPC endpoints (ECR, etc.)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010fbe6b9ce322bfb",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.1.0.0/16"
                ],
                "description": "Allow inbound HTTPS traffic from ECS tasks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:subnet/subnet-0f87ebfabf38399b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f87ebfabf38399b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294417223953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:subnet/subnet-0bee5d70fdc658d41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bee5d70fdc658d41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294417223953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:subnet/subnet-0fa01402c4891b8dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa01402c4891b8dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294417223953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:subnet/subnet-09f3f0a6f552a65dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f3f0a6f552a65dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294417223953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-0cb508df5b3658f8a"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:vpc/vpc-0cb508df5b3658f8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.1.0.0/16",
            "default_network_acl_id": "acl-067e48d203baf4a3e",
            "default_route_table_id": "rtb-03fb0d95c78b9afa0",
            "default_security_group_id": "sg-0a14ec3ce28e3b9b0",
            "dhcp_options_id": "dopt-f982999b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb508df5b3658f8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fb0d95c78b9afa0",
            "owner_id": "294417223953",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            }
          }
        }
      ]
    }
  ]
}